add the http port for the query to retrieve all applications
